--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,52 @@
-<ion-menu [content]="content">
+<!--not login-->
+<ion-menu side="right" [content]="content" id="notLogin">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>
+        <img class="sizeimg" src="img/logo.png">
+      </ion-title>
     </ion-toolbar>
+
   </ion-header>
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
+      <button class="designItem" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-label class="iconFix"><ion-icon name="{{p.icon}}"></ion-icon></ion-label>
+        <ion-label> {{p.title}} </ion-label>
       </button>
     </ion-list>
   </ion-content>
 
+  <ion-footer>
+    <button ion-button menuClose block color="bgyellow" (click)="login()">Login</button>
+  </ion-footer>
 </ion-menu>
+
+
+<!--login-->
+<!-- <span *ngIf="username!=''"> -->
+<ion-menu side="right" [content]="content" id="login">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>
+        <img class="sizeimg" src="img/logo.png">
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button class="designItem" menuClose ion-item *ngFor="let p of pagesForLogin" (click)="openPage(p)">
+        <ion-label class="iconFix"><ion-icon name="{{p.icon}}"></ion-icon></ion-label>
+        <ion-label> {{p.title}} </ion-label>
+      </button>
+    </ion-list>
+  </ion-content>
+  <ion-footer>
+    <button ion-button menuClose block color="danger" (click)="logout()">Logout</button>
+  </ion-footer>
+</ion-menu>
+<!-- </span> -->
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
